--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap');
+
 .nav-color{
     background-color: #36454F !important;
+}
+
+.navfontcolor{
+    font-family: Beau Rivage;
+    color: aliceblue;
+}
+
+body{
+    background-color: #b2ffff8a !important;
+    
+}
+
+.main-font{
+    font-family: Beau Rivage !important;
+}
+
+.common-font{
+    font-family: Quicksand !important;
+}
+
+.bold-text{
+    font-weight: bold;
 }
