--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,10 @@ body{
 
 #menu .tab {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     overflow: hidden;
-    border: 1px solid #616730;
-    background-color: #f1f7f7;
+    border: 4px solid #36454f;
+    background-color: #36454f;
 }
 
 #menu .container-fluid {
@@ -83,20 +83,23 @@ body{
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+    color: white !important;
   }
   
   .tab button:hover {
-    background-color: #ced7cf;
+    background-color: #58656e;
+    border-radius: 5px;
   }
   
   .tab button.active {
-    background-color: #ced7cf;
+    background-color: #58656e;
+    border-radius: 5px;
   }
   
   .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #616730;
+    border: 1px solid #d1d5d9;
     border-top: none;
     background-color: #fff;
   }
