--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 
 
 #content {
-  background-image: url("bb_background.svg");
+  background-image: url("bb_background.png");
   background-repeat: repeat;
   background-size: 15%;
 }
